feat: cambios para properties appdeposit

--- a/config-appdeposit.properties
+++ b/config-appdeposit.properties
@@ -1,1 +1,10 @@
-
+spring.application.name=appdeposit
+server.port=82
+#Connect Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5434/kafka
+spring.datasource.username=postgres
+spring.datasource.password=Aforo2552019
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#Connect kafka
+spring.kafka.template.default-topic= transaction-topic
